--- a/WPF/SAM.Analytical.UI.WPF/Windows/AnalyticalWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/AnalyticalWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:geometry="clr-namespace:SAM.Geometry.UI.WPF;assembly=SAM.Geometry.UI.WPF"
         mc:Ignorable="d"
         WindowState="Maximized"
-        WindowStyle="SingleBorderWindow" d:DesignWidth="800" d:DesignHeight="600">
+        WindowStyle="SingleBorderWindow" d:DesignWidth="800" d:DesignHeight="600" KeyDown="Window_KeyDown">
     <Window.Resources>
         <Style TargetType="RibbonButton">
             <Setter Property="Template">
