--- a/WPF/SAM.Core.UI.WPF/Controls/Filter/NumberFilterControl.xaml
+++ b/WPF/SAM.Core.UI.WPF/Controls/Filter/NumberFilterControl.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="100" d:DesignWidth="270">
     <Grid>
         <GroupBox x:Name="groupBox_Main" Header="Text" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-            <Grid>
+            <Grid ContextMenuOpening="Grid_ContextMenuOpening">
                 <ComboBox x:Name="comboBox_NumberComparisonType" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Width="170" SelectionChanged="comboBox_NumberComparisonType_SelectionChanged"/>
                 <TextBox x:Name="textBox_Value" Text="" Margin="0,46,10,9.6" TextChanged="textBox_Value_TextChanged" TextInput="textBox_Value_TextInput"></TextBox>
                 <CheckBox x:Name="checkBox_Inverted" Content="Invert" HorizontalAlignment="Right" Margin="0,14,5,0" VerticalAlignment="Top" Click="checkBox_Inverted_Click"/>
