--- a/WPF/SAM.Core.UI.WPF/Controls/Filter/TextFilterControl.xaml
+++ b/WPF/SAM.Core.UI.WPF/Controls/Filter/TextFilterControl.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:SAM.Core.UI.WPF"
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="270">
-    <Grid>
+    <Grid ContextMenuOpening="Grid_ContextMenuOpening">
         <GroupBox x:Name="groupBox_Main" Header="Text" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
             <Grid>
                 <ComboBox x:Name="comboBox_TextComparisonType" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Width="100" SelectionChanged="comboBox_TextComparisonType_SelectionChanged"/>
