--- a/WPF/SAM.Analytical.UI.WPF/Controls/InternalConditionControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/InternalConditionControl.xaml
@@ -180,17 +180,17 @@
 
             </Grid>
         </GroupBox>
-        <GroupBox Header="Systems" HorizontalAlignment="Left" Height="316" Margin="902,4,0,0" VerticalAlignment="Top" Width="320" IsEnabled="False">
+        <GroupBox Header="Systems" HorizontalAlignment="Left" Height="316" Margin="902,4,0,0" VerticalAlignment="Top" Width="320" IsEnabled="True">
             <Grid>
                 <Label Content="Ventilation:" HorizontalAlignment="Left" Margin="10,9,0,0" VerticalAlignment="Top"/>
-                <TextBox HorizontalAlignment="Stretch" Height="23" Margin="93,10,75,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True" IsEnabled="False"/>
-                <Button Content="Select" HorizontalAlignment="Left" Margin="242,12,0,0" VerticalAlignment="Top" Width="60"/>
+                <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_VentilationSystem_Name" HorizontalAlignment="Stretch" Height="23" Margin="93,10,75,0" VerticalAlignment="Top" IsEnabled="False"/>
+                <Button x:Name="button_SelectVentilationSystem" Content="Select" HorizontalAlignment="Left" Margin="242,12,0,0" VerticalAlignment="Top" Width="60" Click="button_SelectVentilationSystem_Click"/>
                 <Label Content="Heating:" HorizontalAlignment="Left" Margin="10,43,0,0" VerticalAlignment="Top"/>
-                <TextBox HorizontalAlignment="Stretch" Height="23" Margin="93,44,75,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True" IsEnabled="False"/>
-                <Button Content="Select" HorizontalAlignment="Left" Margin="242,46,0,0" VerticalAlignment="Top" Width="60"/>
+                <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_HeatingSystem_Name" HorizontalAlignment="Stretch" Height="23" Margin="93,44,75,0" VerticalAlignment="Top" IsEnabled="False"/>
+                <Button x:Name="button_SelectHeatingSystem" Content="Select" HorizontalAlignment="Left" Margin="242,46,0,0" VerticalAlignment="Top" Width="60" Click="button_SelectHeatingSystem_Click"/>
                 <Label Content="Cooling:" HorizontalAlignment="Left" Margin="10,77,0,0" VerticalAlignment="Top"/>
-                <TextBox HorizontalAlignment="Stretch" Height="23" Margin="93,78,75,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True" IsEnabled="False"/>
-                <Button Content="Select" HorizontalAlignment="Left" Margin="242,80,0,0" VerticalAlignment="Top" Width="60"/>
+                <WPF:MultipleValueTextBoxControl x:Name="multipleValueTextBoxControl_CoolingSystem_Name" HorizontalAlignment="Stretch" Height="23" Margin="93,78,75,0" VerticalAlignment="Top" IsEnabled="False"/>
+                <Button x:Name="button_SelectCoolingSystem" Content="Select" HorizontalAlignment="Left" Margin="242,80,0,0" VerticalAlignment="Top" Width="60" Click="button_SelectCoolingSystem_Click"/>
                 <Label Content="Supply Unit:" HorizontalAlignment="Left" Margin="10,137,0,0" VerticalAlignment="Top"/>
                 <TextBox HorizontalAlignment="Stretch" Height="23" Margin="93,138,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" IsReadOnly="True" IsEnabled="False"/>
                 <Label Content="Exhaust Unit:" HorizontalAlignment="Left" Margin="10,224,0,0" VerticalAlignment="Top"/>
